<resources>
    <string name="title_activity_Login">User Login </string>
    <string name="title_activity_SignUp">User SignUp </string>
    <string name="title_activity_Guest">Guest Login </string>
    <string name="title_activity_ForgotPassword">Forgot Password </string>
    <string name="title_activity_UserAccount">Account Details</string>
    <string name="title_activity_AboutUs">About Us</string>
    <string name="title_activity_Feedback">User Feedback </string>
    <string name="title_activity_VendorRegistration">Vendor Registration</string>
    <string name="title_activity_Notify">Notifications</string>
    <string name="title_activity_Gallery">Screenshot Gallery</string>
    <string name="title_activity_catalog">Product Catalog</string>
    <string name="title_activity_vendor_details">Vendor Details</string>
    <string name="title_activity_vendor_catalog">Vendor Catalog</string>
    <string name="title_activity_vendor_list">Our Vendors</string>
    <string name="title_activity_Campaign">Project Catalog</string>
    <string name="title_activity_ProductPage">Product Details</string>
    <string name="title_activity_ProjectDetails">Project Details</string>
    <string name="title_activity_ProjectPartDetails">Project details by Part</string>
    <string name="title_activity_CheckList">User CheckList</string>
    <string name="title_activity_favourite_list">User Favourites</string>
    <string name="title_activity_budget_list">User BudgetList</string>
    <string name="title_activity_budget_bar">Budget Bar</string>
    <string name="title_activity_Article3dView">3D Article View</string>
    <string name="title_activity_faq">F A Q</string>
    <string name="title_activity_experimental_3dview">Experimental Web 3DView</string>
    <string name="title_activity_experimental_augment">Experimental Web Augment</string>
    <string name="app_name">L CATALOG</string>
    <string name="powered_by">Powered by</string>
    <string name="powered_by_symbol">&#8471;</string>
    <string name="company_name">Immersion Software Labs Pvt. Ltd.</string>
    <string name="company_tag_line">…the next big immersive experience</string>
    <string name="powered_immersionslabs">Powered by Immersion Software Labs.</string>
    <string name="powered_symbol_immersionslabs"> Immersion Software Labs. &#8471;</string>
    <string name="slide2_title">AUGMENT</string>
    <string name="slide2_desc">Augment Feature will let you see the object chosen by you and Project into the real world with the help of a pattern \n available at </string>
    <string name="slide2_link"><param>http://lcatalog.immersionslabs.com/</param></string>
    <string name="slide3_title">360&#xb0; Object Rotation</string>
    <string name="slide3_desc">This feature lets you rotate the object in and around, to get a clear picture of what you are exactly buying.</string>
    <string name="slide4_desc">This feature lets you capture the surrounds after the objects are augmented. Also lets you share between the close ones.</string>
    <string name="slide4_title_capture">CAPTURE</string>
    <string name="slide4_title_share">SHARE</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">START</string>
    <string name="welcome_aboard">Welcome Aboard</string>
    <string name="firstly_who_you_are_matters">Firstly for Us, Who you are matters !!</string>
    <string name="login_sign">OGIN</string>
    <string name="login_hint">If you are a customer already…</string>
    <string name="signup_sign">IGNUP</string>
    <string name="signup_hint">If you want to become a customer…</string>
    <string name="guest_sign">UEST</string>
    <string name="guest_hint">If you are a oneTime Shopper…</string>
    <string name="btn_login">LOGIN</string>
    <string name="autofill_details">Auto Fill</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email Address</string>
    <string name="mobile_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="btn_create_account">CREATE ACCOUNT</string>
    <string name="btn_forgot_password"><u>Forgot Password</u></string>
    <string name="btn_submit">SUBMIT</string>
    <string name="guest_details">Login as Guest</string>
    <string name="New_password">New Password</string>
    <string name="ReEnter_new_password">Re Enter New Password</string>
    <string name="nav_hi">Hi,  </string>
    <string name="Logged_userName">UserName</string>
    <string name="email_phone_number">Email / phone number</string>
    <string name="customer">CUSTOMER</string>
    <string name="guest">GUEST</string>
    <string name="menu_catalogues">Catalogues</string>
    <string name="menu_catalog">Catalog</string>
    <string name="menu_project_campaign">Project Catalog</string>
    <string name="menu_vendor_catalog">Vendor Catalog</string>
    <string name="menu_augment">Augment</string>
    <string name="menu_my_profile">My profile</string>
    <string name="menu_gallery">My Gallery</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_my_notifications">My Notifications</string>
    <string name="menu_my_favorites">My Favorites</string>
    <string name="menu_my_budget_list">My Budget List</string>
    <string name="menu_my_checklist">My Check List</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_vendor_campaign">Vendor Campaign</string>
    <string name="menu_vendor_registration">Vendor Registration</string>
    <string name="menu_help_and_support">Help &amp; Support</string>
    <string name="menu_feedback">FeedBack</string>
    <string name="menu_terms_conditions">Terms &amp; Conditions</string>
    <string name="menu_about">About</string>
    <string name="menu_faq">FAQ\'s</string>
    <string name="btn_share">Share</string>
    <string name="btn_3d_view">360&#176; View</string>
    <string name="btn_augment">Augment</string>
    <string name="btn_budget_list">Budget List</string>
    <string name="btn_check_list">Check List</string>
    <string name="btn_favourite">Favourite</string>
    <string name="btn_3dView_exp">Exp 3DView</string>
    <string name="btn_Augment_exp">Exp Augment</string>
    <string name="article_title">TITLE</string>
    <string name="article_title_text">Title Text</string>
    <string name="article_desc">DESCRIPTION</string>
    <string name="article_desc_text">Description Text</string>
    <string name="article_original_price_title">ORIGINAL PRICE:</string>
    <string name="article_original_price">1000</string>
    <string name="article_discount_title">Discount :   </string>
    <string name="article_discount_value">20</string>
    <string name="article_percentage_symbol">%</string>
    <string name="article_discount_off"> OFF</string>
    <string name="article_discount_price_title"> PRICE:</string>
    <string name="article_after_discount_price">800</string>
    <string name="article_price_tag">/-</string>
    <string name="article_price_tag_symbol">\u20B9</string>
    <string name="article_rating">4.3 *</string>
    <string name="article_rating_reviews">50 ratings &amp; 15 reviews</string>
    <string name="article_dim_width">WIDTH :</string>
    <string name="article_dim_width_value">30</string>
    <string name="article_dim_length">LENGTH :</string>
    <string name="article_dim_length_value">25</string>
    <string name="article_dim_height">HEIGHT :</string>
    <string name="article_dim_height_value">20</string>
    <string name="article_dimension_symbol">in</string>
    <string name="article_vendor_title">PROVIDED BY :</string>
    <string name="article_pattern_title">ARTICLE PATTERN :</string>
    <string name="project_pattern_title">PROJECT PATTERN :</string>
    <string name="article_vendor_details">NAME &amp; ADDRESS :</string>
    <string name="article_vendor_name">CMR</string>
    <string name="article_vendor_address">Chandra Layout, Bangalore- 560072</string>
    <string name="article_feedback_title">FEEDBACK</string>
    <string name="feedback_article_name">Feedback Article Name</string>
    <string name="feedback_article_id">Feedback Article ID</string>
    <string name="feedback_article_vendor_id">Feedback Article Vendor ID</string>
    <string name="article_feedback_message">Feedback/Query related to this Article</string>
    <string name="btn_submit_feedback">SUBMIT FEEDBACK</string>
    <string name="article_rating_title">RATING</string>
    <string name="btn_submit_rating">SUBMIT RATING</string>
    <string name="vendor_title">Vendor Name</string>
    <string name="btn_submit_app_feedback">SUBMIT FEEDBACK</string>
    <string name="FeedBack_Subject">My valuable FeedBack</string>
    <string name="new_vendor_name">Company Name</string>
    <string name="new_vendor_address">Company Address</string>
    <string name="new_vendor_email">Company Email</string>
    <string name="new_vendor_ph_no">Mobile Number</string>
    <string name="new_vendor_alt_ph_no">Alternative Mobile Number</string>
    <string name="new_vendor_submit">SUBMIT / REGISTER</string>
    <string name="new_vendor_contact_person">Person to be Contacted</string>
    <string name="new_vendor_no_of_models_req">No of Models/Designs required (Approx)</string>
    <string name="new_vendor_state">In which State?</string>
    <string name="new_vendor_pincode">States PinCode?</string>
    <string name="new_vendor_location">Which City?</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_subject">Hi welcome to the Immersion Software Labs and you can avail many offers from Immersion Software Labs.</string>
    <string name="btn_edit_profile">EDIT PROFILE</string>
    <string name="btn_update_profile">UPDATE PROFILE</string>
    <string name="btn_remove">REMOVE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="project_name_title">PROJECT NAME :</string>
    <string name="project_name">Project Name</string>
    <string name="project_desc_title">PROJECT DESCRIPTION :</string>
    <string name="project_desc">Project Description</string>
    <string name="project_sub_desc_title">PROJECT SUB DESCRIPTION :</string>
    <string name="project_sub_desc">Project Sub Description</string>
    <string name="project_part_name_title">PROJECT PART NAME :</string>
    <string name="project_part_name">Project Part Name</string>
    <string name="project_part_desc_title">PROJECT PART DESCRIPTION :</string>
    <string name="project_part_desc">Project Part Description</string>
    <string name="total_budget_value_title">Total \nBudget</string>
    <string name="total_budget_value">100000</string>
    <string name="current_budget_value_title">Current \nValue</string>
    <string name="current_budget_value">78000</string>
    <string name="remaining_budget_value_title">Remaining \nBudget</string>
    <string name="remaining_budget_value">22000</string>
    <string name="btn_update_budget">UPDATE BUDGET</string>
    <string name="btn_alter_budget">ALTER BUDGET</string>
    <string name="btn_clear_budget">CLEAR BUDGET</string>
    <string name="total_check_value_title">Total Value :</string>
    <string name="total_check_value">100000</string>
    <string name="btn_place_enquiry">Place Enquiry</string>
    <string name="what_is_l_catalog">What is L-CATALOG ?</string>
</resources>