<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GuestActivity"
    tools:showIn="@layout/activity_guest">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_20"
            android:paddingTop="@dimen/margin_50">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/margin_100"
                android:layout_height="@dimen/margin_100"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/companyicon" />

            <TextView
                android:id="@+id/application_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fontFamily="@font/graduate"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_max" />

            <TextView
                android:id="@+id/immersionslabs"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fontFamily="@font/cookie"
                android:gravity="center"
                android:text="@string/powered_immersionslabs"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <!-- Name Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/area_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_3">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <!-- mobile number -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/area_input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_3">

                <EditText
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_guest"
                    android:layout_width="@dimen/margin_200"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_3"
                    android:fontFamily="@font/overlock_sc"
                    android:padding="@dimen/margin_10"
                    android:text="@string/guest_details"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/btn_get_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/autofill_details"
                    app:srcCompat="@mipmap/ic_get_details" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>