<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_4"
    android:background="@drawable/background_curves"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/margin_3"
    app:cardElevation="@dimen/margin_3">


    <RelativeLayout
        android:id="@+id/notification_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/notify_image"
            android:layout_width="@dimen/margin_100"
            android:layout_height="@dimen/margin_100"
            android:contentDescription="@string/app_name"
            android:paddingEnd="@dimen/margin_0"
            android:paddingStart="@dimen/margin_5" />

        <TextView
            android:id="@+id/notification_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/notify_image"
            android:paddingEnd="@dimen/margin_0"
            android:paddingStart="@dimen/margin_20"
            android:paddingTop="@dimen/margin_20"
            android:text="@string/notifications_title"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/notification_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notification_title"
            android:layout_toEndOf="@+id/notify_image"
            android:maxLines="3"
            android:paddingEnd="@dimen/margin_0"
            android:paddingStart="@dimen/margin_20"
            android:text="@string/notifications_subject"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="italic|bold" />
    </RelativeLayout>
</android.support.v7.widget.CardView>